Add bill payment methods
